--- a/counted-tech/src/app/add-employee-available/add-employee-available.component.html
+++ b/counted-tech/src/app/add-employee-available/add-employee-available.component.html
@@ -6,10 +6,10 @@
         <p><strong>Add Employee</strong></p>
     </div>
     <div class="head">
-        <div (click)="openAddEmployeeLocation()" class="lo we">
+        <div (click)="openAddEmployeeLocationComponent()" class="lo we">
             <span>Location</span>
         </div>
-        <div (click)="openAddEmployeeSection()" class="se we">
+        <div (click)="openAddEmployeeSectionComponent()" class="se we">
             <span>Section</span>
         </div>
         <div class="av we">
