--- a/counted-tech/src/app/add-employee-location/add-employee-location.component.html
+++ b/counted-tech/src/app/add-employee-location/add-employee-location.component.html
@@ -9,10 +9,10 @@
         <div class="lo we">
             <span>Location</span>
         </div>
-        <div (click)="openAddEmployeeSection()" class="se we">
+        <div (click)="openAddEmployeeSectionComponent()" class="se we">
             <span>Section</span>
         </div>
-        <div (click)="openAddEmployeeAvailable()" class="av we">
+        <div (click)="openAddEmployeeAvailableComponent()" class="av we">
             <span>Available</span>
         </div>
     </div>
