--- a/counted-tech/src/app/add-employee-section/add-employee-section.component.html
+++ b/counted-tech/src/app/add-employee-section/add-employee-section.component.html
@@ -6,13 +6,13 @@
         <p><strong>Add Employee</strong></p>
     </div>
     <div class="head">
-        <div (click)="openAddEmployeeLocation()" class="lo we">
+        <div (click)="openAddEmployeeLocationComponent()" class="lo we">
             <span>Location</span>
         </div>
         <div class="se we">
             <span>Section</span>
         </div>
-        <div (click)="openAddEmployeeAvailable()" class="av we">
+        <div (click)="openAddEmployeeAvailableComponent()" class="av we">
             <span>Available</span>
         </div>
     </div>
