--- a/counted-tech/src/app/delete-account/delete-account.component.html
+++ b/counted-tech/src/app/delete-account/delete-account.component.html
@@ -1,1 +1,15 @@
-<p>delete-account works!</p>
+<div class="all">
+    <div class="first">
+        <div class="mmm">
+            <div class="img">
+                <img (click)="openMainComponent()" src="../../assets/close.svg" alt="" class="svg">
+            </div>
+        </div>
+        <br>
+        <span>Do you really want to delete your account?</span>
+    </div>
+    <br>
+    <div>
+        <button class="second">Delete Account</button>
+    </div>
+</div>
