--- a/counted-tech/src/app/settings/settings.component.html
+++ b/counted-tech/src/app/settings/settings.component.html
@@ -1,1 +1,17 @@
-<p>settings works!</p>
+<div>
+    <app-navbar></app-navbar>
+    <div class="main">
+        <div class="left">
+            <p>Rechtliches</p>
+            <button><span>Imprint</span><span>></span></button>
+            <button><span>Privacy Policy</span> <span>></span></button>
+            <button><span>Terms & Conditions</span><span>></span></button>
+        </div>
+        <div class="right">
+            <p>Einstellungen</p>
+            <button><span>Change Password</span><span>></span></button>
+            <button><span>Log off</span><span>></span></button>
+            <button><span>Delete Account</span><span>></span></button>
+        </div>
+    </div>
+</div>
