--- a/counted-tech/src/app/change-password/change-password.component.html
+++ b/counted-tech/src/app/change-password/change-password.component.html
@@ -1,1 +1,19 @@
-<p>change-password works!</p>
+<div class="all">
+    <div class="first">
+        <div class="mmm">
+            <div class="img">
+                <img (click)="openMainComponent()" src="../../assets/close.svg" alt="" class="svg">
+            </div>
+        </div>
+        <div class="txt">
+            <span>Change Password</span>
+        </div>
+    </div>
+    <br>
+    <div class="second">
+        <input type="text" name="" placeholder="Old password">
+        <input type="text" name="" placeholder="New password">
+        <input type="text" name="" placeholder="Repeat New password">
+        <button>Change Password</button>
+    </div>
+</div>
