--- a/counted-tech/src/app/navbar/navbar.component.html
+++ b/counted-tech/src/app/navbar/navbar.component.html
@@ -1,13 +1,15 @@
 <div class="nav">
-    <img class="logo"src="../../assets/logo.png" alt="">
+    <img (click)="openMainComponent()" class="logo"src="../../assets/logo.png" alt="">
     <div class="icon">
-        <img src="../../assets/icon1.svg" alt="" class="svg">
-        <img src="../../assets/icon2.svg" alt="" class="svg">
+        <img (click)="openAddEmployeeLocationComponent()" src="../../assets/icon1.svg" alt="" class="svg">
+        <img (click)="openAddWorklocationComponent()" src="../../assets/icon2.svg" alt="" class="svg">
         <img src="../../assets/icon3.svg" alt="" class="svg">
         <img src="../../assets/icon4.svg" alt="" class="svg">
-        <img src="../../assets/icon5.svg" alt="" class="svg">
+        <img (click)="openAddJobtitleComponent()" src="../../assets/icon5.svg" alt="" class="svg">
         <img src="../../assets/icon6.svg" alt="" class="svg">
-        <img src="../../assets/icon7.svg" alt="" class="svg">
+        <img (click)="openSettingsComponent()" src="../../assets/icon7.svg" alt="" class="svg">
+        <img src="../../assets/icon3.svg" alt="" class="svg">
+        <img src="../../assets/icon4.svg" alt="" class="svg">
     </div>
 
 </div>
