--- a/counted-tech/src/app/privacy-policy/privacy-policy.component.html
+++ b/counted-tech/src/app/privacy-policy/privacy-policy.component.html
@@ -1,6 +1,6 @@
 <div class="main">
     <div class="top">
-        <img src="../../assets/close.svg" alt="">
+        <img src="../../assets/close.svg" alt="" (click)="goBack()">
     </div>
     <div class="head">
         <p>Privacy Policy</p>
