--- a/counted-tech/src/app/terms-condition/terms-condition.component.html
+++ b/counted-tech/src/app/terms-condition/terms-condition.component.html
@@ -1,6 +1,6 @@
 <div class="main">
     <div class="top">
-        <img (click)="openMainComponent()" src="../../assets/close.svg" alt="">
+        <img (click)="goBack()" src="../../assets/close.svg" alt="">
     </div>
     <div class="head">
         <p>Terms and Conditions</p>
