--- a/counted-tech/src/app/delete-account/delete-account.component.html
+++ b/counted-tech/src/app/delete-account/delete-account.component.html
@@ -2,7 +2,7 @@
     <div class="first">
         <div class="mmm">
             <div class="img">
-                <img (click)="openMainComponent()" src="../../assets/close.svg" alt="" class="svg">
+                <img (click)="goBack()" src="../../assets/close.svg" alt="" class="svg">
             </div>
         </div>
         <br>
